<resources>
    <string name="app_name">Medipal</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="forgot_text">Forgot password</string>
    <string name="check_email">Verification email will be sent to your inbox</string>
    <string name="verify_your_email">Check your inbox to verify your email</string>
    <string name="forgot_email">Check your email for password reset link</string>
    <string name="all_required">* All fields are required</string>
    <string name="health_record_update">Update your health information</string>
    <string name="invite_info">User will be added to consultation list upon acceptance</string>
    <string name="appointment_scheduling_text">Your appointments</string>
    <string name="consultation_text">Consultation</string>
    <string name="personal_health_record_text">Manage health record</string>
    <string name="health_tips_text">Daily Health tips</string>
    <string name="iam_hint">I am:</string>
    <string name="email_hint">Email address:</string>
    <string name="password_hint">Password:</string>
    <string name="first_name_hint">First Name:</string>
    <string name="last_name_hint">Last Name:</string>
    <string name="mobile_hint">Mobile no:</string>
    <string name="gender_hint">Gender:</string>
    <string name="country_hint">Country of Residence:</string>
    <string name="speciality_hint">Speciality:</string>
    <string name="type_something_hint">Type something...</string>
    <string name="weight">WEIGHT (kg)</string>
    <string name="height">HEIGHT (cm)</string>
    <string name="blood_sugar_level">BLOOD SUGAR (mg/dL)</string>
    <string name="blood_pressure">BLOOD PRESSURE (mmHg)</string>
    <string-array name="blood_group">
        <item>-Select-</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="genotype">
        <item>-Select-</item>
        <item>AA</item>
        <item>AS</item>
        <item>SS</item>
        <item>SC</item>
        <item>CC</item>
    </string-array>
    <string name="cholesterol_level">CHOLESTEROL LEVEL (mg/dL)</string>
    <string name="allergies">ALLERGIES (drugs, food etc)</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="retrieve_password_button">RETRIEVE PASSWORD</string>
    <string name="resend_verification">RESEND</string>
    <string name="schedule_button">SCHEDULE</string>
    <string name="add_button">ADD</string>
    <string name="search_button">SEARCH</string>
    <string name="remove_button">REMOVE</string>
    <string name="save_button">SAVE</string>
    <string name="enter_button">ENTER</string>
    <string name="cancel_appointment_button">CANCEL THIS APPOINTMENT</string>
    <string name="send_invite_button">SEND INVITE</string>
    <string name="decline_invite_button">DECLINE INVITE</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="login_link">Already have an account? Login now</string>
    <string name="register_link">No account yet? Register now</string>
    <string name="resend_link">Already registered? Resend verification email</string>
    <string name="forgot_link">Forgot password</string>
    <string name="view_details">View Details</string>
    <string name="accept_invite">ACCEPT</string>
    <string name="cancel_invite">CANCEL</string>
    <string name="title_activity_dash">DashActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="edit_account_action">Edit account</string>
    <string name="invites_action">Invites</string>
    <string name="send_new_invite">Send new invite</string>
    <string name="pending_invites">Pending invites</string>
    <string-array name="gender_array">
        <item>-Select-</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="user_type_array">
        <item>-Select-</item>
        <item>A doctor</item>
        <item>Not a doctor</item>
    </string-array>
    <string-array name="test_time">
        <item>-Select-</item>
        <item>Fasting</item>
        <item>Before meal</item>
        <item>After Meal(1-2hrs)</item>
        <item>Before Exercise</item>
        <item>Bedtime</item>
    </string-array>
</resources>