<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/dash_main"
    tools:context=".ui.DashboardActivity"
    android:layout_marginTop="56dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/appt_sch"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_scheduling_text"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/consult"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultation_text"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/phr"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/mhr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_health_record_text"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/tips"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_tips_text"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            />

    </FrameLayout>
</LinearLayout>